@@ -1,4 +1,5 @@
 Veretino 0.5.2
+* Implemented import from digest files (*.sha1/256/512) to DB item ("new file" status only).
 * DateTime stamp inheritance during Branching has become a bit smarter.
     If the selected subfolder contains only checked and matched items, the Branch will be created with a new timestamp, as a new DB.
 * Minor improvements to dialog boxes.
